[package]
name = "clock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
iced = { git = "https://github.com/hecrj/iced" }
iced_native = { git = "https://github.com/hecrj/iced", path = "./native" }
futures = "0.3"
async-std = { version = "1.3", features = ["unstable"] }
